# CPU-VM

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Components/: BinaryInstruction.cpp  BinaryInstruction.h  Instruction.cpp  Instruction.h  Machine.cpp  Machine.h  Program.cpp  Program.h  Register.cpp  Register.h  UnaryInstruction.cpp  UnaryInstruction.h
src/Components/Instructions/: IAdd.cpp  IAdd.h  ICMP.cpp  ICMP.h  IDec.cpp  IDec.h  IInc.cpp  IInc.h  IJump.cpp  IJump.h  IMov.cpp  IMov.h  ISub.cpp  ISub.h
